--- a/index.html
+++ b/index.html
@@ -5,19 +5,6 @@
 <title>Minecraft - Site non officiel</title>
 </head>
 <body>
-  <a href="index.html">
-<img id="logo" src="minecraft-logo.png"></a>
-<ul>
-  <li><a class="active" href="index.html">Accueil</a></li>
-  <li><a href="index2.html">L'histoire du jeu</a></li>
-  <li><a href="https://www.minecraft.net/fr-fr/get-minecraft" target="_blank">Téléchager le jeu</a></li>
-  <li><a href="index3.html">Avis</a></li>
-</ul>
-<div id="container"> <h3 id="title2">Bienvenue dans Minecraft</h3>
-<h4>Minecraft est un jeu de type "bac à sable"  développé par <a href="https://fr.wikipedia.org/wiki/Markus_Persson" style="color: black;">Markus Persson</a> </h4> 
-<p id="text">Pour savoir l'histoire du jeu : <a href="index2.html">clic ici</a></p>
-<iframe width="853" height="480" src="https://www.youtube.com/embed/MmB9b5njVbA" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-
+  <p> Le site est en cours de construction ;) </p>
 </body>
 </html>
