--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <p> Le site est en cours de construction ;) </p>
-  <a href=index2.html>test</a>
+  <a href="index2.html">test</a>
 </body>
 </html>
